--- a/shell/index.html
+++ b/shell/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title></title>
   </head>
+
   <body>
 
-    <script type="systemjs-importmap">
+  <script type="systemjs-importmap">
       {
         "imports": {
-          "@portal/config": "http://localhost:8233/config.js",          
+          "navbar": "http://127.0.0.1:8080/plugin.js"
         }
       }
-    </script>
-    
-    <script src='https://unpkg.com/systemjs@4.1.0/dist/system.js'></script>
-    <script src='https://unpkg.com/systemjs@4.1.0/dist/extras/amd.js'></script>
-    <script src='https://unpkg.com/systemjs@4.1.0/dist/extras/named-exports.js'></script>
-    <script src='https://unpkg.com/systemjs@4.1.0/dist/extras/use-default.js'></script>
+  </script>
 
-    <!-- Load the common deps-->    
+  <script src='https://unpkg.com/systemjs@6.1.7/dist/system.js'></script>
+  <script src='https://unpkg.com/systemjs@6.1.7/dist/extras/amd.js'></script>
+  <script src='https://unpkg.com/systemjs@6.1.7/dist/extras/named-exports.js'></script>
+  <script src='https://unpkg.com/systemjs@6.1.7/dist/extras/use-default.js'></script>
 
-    <!-- Load the application -->
-    <script>
-      System.import('@portal/config')
-    </script>
-    <div id='navbar'>
-    </div>
+  <!-- Load the common deps-->
+  <script src='./node_modules/single-spa/lib/umd/single-spa.min.js'></script>
+
+  <!-- Load the application -->
+  <script src='./src/single-spa.config.js'></script>
+  <div id='navbar'></div>
 
   </body>
 </html>
