Added support for public path

--- a/shell/index.html
+++ b/shell/index.html
@@ -12,7 +12,7 @@
   <script type="systemjs-importmap">
       {
         "imports": {
-          "navbar": "http://127.0.0.1:8080/plugin.js"
+          "react": "http://127.0.0.1:8080/plugin.js"
         }
       }
   </script>
@@ -27,7 +27,7 @@
 
   <!-- Load the application -->
   <script src='./src/single-spa.config.js'></script>
-  <div id='navbar'></div>
+  <div id='react'></div>
 
   </body>
 </html>
